Build openapi JSON for api definitions